# FitMentor

./: .dockerignore  .gitignore  docker-compose.yml  package-lock.json
.github/workflows/: build-apk.yml
apps/api/: .env.example  Cargo.toml  Dockerfile
apps/api/migrations/: 001_create_users.sql  002_create_profiles.sql  003_create_subscriptions.sql  004_create_daily_logs.sql  005_create_workout_completions.sql  009_create_ai_plans.sql  010_create_tools_advice.sql
apps/api/src/: config.rs  error.rs  main.rs
apps/api/src/auth/: jwt.rs  middleware.rs
apps/api/src/db/: mod.rs
apps/api/src/graphql/: context.rs  mod.rs  mutations.rs  queries.rs  schema.rs  subscriptions.rs  types.rs
apps/api/src/models/: daily_log.rs  mod.rs  profile.rs  user.rs
apps/api/src/routes/: ai_plans.rs  auth.rs  coach_log.rs  health.rs  logs.rs  mod.rs  payments.rs  user.rs  workout_complete.rs
apps/api/src/services/: cache.rs  llm.rs
apps/mobile/src/utils/: habits.ts  profile.ts  profileCalc.ts  workouts.ts
apps/web/: .env.example  package.json  worker-configuration.d.ts  wrangler.toml
apps/web/src/: server.ts
apps/web/src/components/: DashboardLayout.tsx  MobileShell.tsx
apps/web/src/routes/: __root.tsx  coach.tsx  dashboard.tsx  exercise.$name.tsx  nutrition.tsx  onboarding.tsx  profile.tsx  progress.tsx  signin.tsx  signup.tsx  tools.tsx  workouts.tsx
apps/web/src/services/: ai-gateway.server.ts  api-service.ts  coach-functions.ts  coach-sessions.server.ts  sync.ts  (+4 more)
docs/: ARCHITECTURE.md
microservices/daily-planner/: .env.example  Dockerfile  lambda_function.py  main.py  requirements.txt
scripts/: setup-capacitor.mjs
src/lib/: subscription.ts
src/routes/: profile.tsx
(+63 files in other folders)
