[package]
name = "fitmentor-api"
version = "0.1.0"
edition = "2021"

[dependencies]
url = "2"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "tls-rustls"] }
redis = { version = "0.29", features = ["tokio-comp", "connection-manager"] }
tower-http = { version = "0.6", features = ["cors"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json", "stream"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
